finish categiry but error in created by
