# src/main/java/com/nazer/e_commerce/category/enums/CategoryTypes.java
@@ -1,0 +1,3 @@
+package com.nazer.e_commerce.category.enums;
+
+
